<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.FlightDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="240dp">

                <ImageView
                    android:id="@+id/iv_flight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:foreground="@drawable/flight_gradient" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title_city"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="40sp"
                        android:textStyle="bold"
                        tools:text="SAN FRANCISCO" />


                    <TextView
                        android:id="@+id/tv_subtitile_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        tools:text="France" />

                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="16dp"
                android:weightSum="5">

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/flight_from"
                            android:textAllCaps="true"
                            android:textColor="@color/primary_text"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_fly_from"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:textColor="@color/black"
                            android:textSize="56sp"
                            tools:text="BRN" />

                        <TextView
                            android:id="@+id/tv_city_from"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primary_text"
                            android:textSize="16sp"
                            tools:text="Brno" />

                    </LinearLayout>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:rotation="90"
                        android:src="@drawable/ic_flight_black_24dp" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        android:textColor="@color/primary_text">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/flight_to"
                            android:textAllCaps="true"
                            android:textColor="@color/primary_text"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/tv_fly_to"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:includeFontPadding="false"
                            android:lineSpacingExtra="0dp"
                            android:textColor="@color/black"
                            android:textSize="56sp"
                            tools:text="PAR" />

                        <TextView
                            android:id="@+id/tv_city_to"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primary_text"
                            android:textSize="16sp"
                            tools:text="Paris" />

                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/departure"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_time_departure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        tools:text="10:45" />

                    <TextView
                        android:id="@+id/tv_date_departure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp"
                        tools:text="5. Sept" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/arrival"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_time_arrival"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        tools:text="12:00" />

                    <TextView
                        android:id="@+id/tv_date_arrival"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp"
                        tools:text="5. Sept" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_book"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@color/accent"
        android:padding="16dp"
        android:text="@string/book_flight"
        android:textColor="@color/white" />

</FrameLayout>

